added display and hack notes

--- a/CSSLessonInCode/index.html
+++ b/CSSLessonInCode/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,26 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
+
 <body>
+    <header>
+        <h3 class="main-nav">Welcome to the Jungle</h3>
+        <ul class="main-nav_item">
+            <li class="main-nav_items">About World</li>
+            <li class="main-nav_items">Contact Us</li>
+            <li class="main-nav_items">Admin</li>
+        </ul>
+    </header>
     <h2>So excited to master CSS</h2>
+    <h2 id="white" class="test">Choose something nice today</h2>
+    <div>Some text has to go in here. In a few seconds Ill start typing gibrsih asjosmg thaste alsldke gajsieo syosagp
+        asdoigaspowo oa adka lkdjalkd al;dsjoqiweg aksdakdfakdfah jah fah fdlkja hdfkaj hfdahgdi auhbaih akd flkajsdh jh
+        aljkdh fkajc ljd iajshdfvajc vlasjdhvaldj alsdk ajdhadsfilj hvlkajnd ja sdas ajsj fhalsk fhalskj fhaskljdfh
+        alskjf alknaidsfj hqoiewusdvha ojihv asidhasvnl akdasidjhoawlegih.</div>
+    <div>
+        <p>This is test text</p>
+    </div>
+    <h3>Does child affect parent in descendent?</h3>
 </body>
+
 </html>
