Added page poster and some navigation

--- a/CSSLessonInCode/index.html
+++ b/CSSLessonInCode/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <!-- <header> -->
+        <div id="page-top"></div>
+        <a href="#top"><div id="goto-top-anchor"></div></a>
         <div class="navbar light">
             <div class="logo">LOGO</div>
             <ul class="buttons">
@@ -19,8 +21,11 @@
                 <li class="button"><a href="#classic">Classic</a></li>
                 <li class="button"><a href="#tender-surrender">Tender Surrender</a></li>
                 <li class="button"><a href="#anasthesize">Anasthesize</a></li>
+                <li class="button"><a href="#shapes">Shapes</a></li>
             </ul>
         </div>
+        <div class="home-img"></div>
+        <div class="home-img-clear"></div>
     <!-- </header> -->
 
     <div class="content-container">
@@ -132,6 +137,15 @@
                 productivity.[36][37] The United States is the foremost military power in the world, making up a third of
                 global military spending,[38] and is a leading political, cultural, and scientific force
                 internationally.[39]
+            </p>
+            <span id="shapes" class="title">Shapes</span>
+            <p>
+                <div class="triangle"></div>
+                <div class="square"></div>
+                <div class="rectangle"></div>
+                <div class="circle"></div>
+                <div class="ellipse"></div>
+                <div class="trapezoid"></div>
             </p>
     </div>
 </body>
