Added notes on advanced attribute selectors

--- a/CSSLessonInCode/index.html
+++ b/CSSLessonInCode/index.html
@@ -199,7 +199,7 @@
         <span id="shapes" class="title">Shapes</span>
         <p>
             <div class="triangle"></div>
-            <div class="square"></div>
+            <div id="dragSquare" class="square" draggable="true" ondragstart="drag(event)"></div>
             <div class="rectangle"></div>
             <div class="circle"></div>
             <div class="ellipse"></div>
