--- a/CSSLessonInCode/index.html
+++ b/CSSLessonInCode/index.html
@@ -197,14 +197,14 @@
             internationally.[39]
         </p>
         <span id="shapes" class="title">Shapes</span>
-        <p>
-            <div class="triangle"></div>
-            <div id="dragSquare" class="square" draggable="true" ondragstart="drag(event)"></div>
-            <div class="rectangle"></div>
-            <div class="circle"></div>
-            <div class="ellipse"></div>
-            <div class="trapezoid"></div>
-        </p>
+        <div class="shapes">
+            <div class="shape triangle"></div>
+            <div id="dragSquare" class="shape square" draggable="true" ondragstart="drag(event)"></div>
+            <div class="shape rectangle"></div>
+            <div class="shape circle"></div>
+            <div class="shape ellipse"></div>
+            <div class="shape trapezoid"></div>
+        <div>
     </div>
 </body>
 
