--- a/CSSLessonInCode/index.html
+++ b/CSSLessonInCode/index.html
@@ -204,7 +204,19 @@
             <div class="shape circle"></div>
             <div class="shape ellipse"></div>
             <div class="shape trapezoid"></div>
+        </div>
+
+        <div class="blocks">
+            <div class="block b1">Block 1</div>
+            <div class="block b2">Block 2</div>
+            <div class="block b3">Block 3</div>
+            <div class="block b4">Block 4</div>
+            <div class="block b5">Block 5</div>
+        </div>
+
         <div>
+            <div class="trans">Transform & Transition Test</div>
+        </div>
     </div>
 </body>
 
